--- a/src/tools/psakusei/Templates/TEST_Model.erb
+++ b/src/tools/psakusei/Templates/TEST_Model.erb
@@ -5,7 +5,7 @@ using System.Collections.Generic;
 using System.Linq;
 using Microsoft.VisualStudio.TestTools.UnitTesting;
 using FluentAssertions;
-using <%= $config.Namespace -replace 'Tests$', 'Common' %>.Models;
+using <%= $common_ns %>.Models;
 
 namespace <%= $config.Namespace %>.Core.Models
 {
